--- a/src/FE/src/components/SlideShow/SlideShow.css
+++ b/src/FE/src/components/SlideShow/SlideShow.css
@@ -42,15 +42,15 @@
     position: absolute;
     top: 45%;
     transform: translateY(-50%);
-    font-size: 20px;
+    font-size: 18px;
     color: #333;
     background-color: rgba(255, 255, 255, 0.8);
     padding: 10px;
     cursor: pointer;
     border-radius: 50%;
     user-select: none;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -294,4 +294,46 @@
 
 .locationn:hover::after {
     display: block;
+}
+
+@media screen and (max-width: 992px) {
+    .staffs img {
+        height: 110%;
+    }
+
+    .testimonial-text h3 {
+        line-height: 1.1;
+        margin-bottom: 5px;
+
+    }
+
+    .testimonial-text .comment {
+        margin-bottom: 5px;
+    }
+
+    .staffs {
+        margin-top: 30px;
+    }
+
+    .slide .name {
+        margin-top: 5px;
+    }
+
+    .staffs-show h3 {
+        line-height: 1.1;
+    }
+
+    .testimonial-text h3 {
+        font-size: 2.1em;
+    }
+
+    .testimonial-text img {
+        margin-top: 10px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .arrow-slide {
+        display: none;
+    }
 }
