--- a/src/FE/src/components/SearchFlight/SearchFlight.css
+++ b/src/FE/src/components/SearchFlight/SearchFlight.css
@@ -2,9 +2,7 @@ body {
     overflow-y: scroll;
 }
 
-.search-flight-container {
-    display: flex;
-}
+
 
 .search-flight-container .main-fs-content {
     padding: 15px 20px;
@@ -16,8 +14,11 @@ body {
 
 .jss2412 {
     display: flex;
+    justify-content: center;
+    align-items: center;
     gap: 5px;
 }
+
 
 .search-flight-container .content {
     display: flex;
@@ -27,7 +28,7 @@ body {
 
 .search-flight-container .route-info {
     display: flex;
-    gap: 30px;
+    gap: 20px;
     margin-top: 10px;
 }
 
@@ -36,8 +37,9 @@ body {
     height: 1.5em;
 }
 
-.search-flight-container .right-search-fs {
-    width: 70%;
+.search-flight-container .left-search-fs {
+    width: 65%;
+    padding-bottom: 100px;
 }
 
 .search-flight-container strong {
@@ -45,7 +47,7 @@ body {
 }
 
 
-.search-flight-container .fs-icon {
+.search-flight-container .fs-icon, .search-flight-container .fs-icon1 {
     width: 40px;
     height: 40px;
     background: white;
@@ -68,12 +70,17 @@ body {
     font-weight: 550;
 }
 
+.sidebar-fs-details p:first-child {
+    margin-bottom: 5px;
+}
+
 .search-flight-container .airport {
     color: #686565;
 }
 
 .search-flight-container .flight-list .span-special {
     margin: 0;
+    font-weight: 500;
     font-size: 13px;
     margin: 0 5px;
 }
@@ -83,20 +90,24 @@ body {
     font-weight: 550;
 }
 
+.search-flight-container .flight-code {
+    color: #696363;
+    font-size: 13px;
+}
+
 
 .search-flight-container .sidebar-fs {
-    width: 300px;
-    height: 300px;
-    border: 1px solid #ccc;
+    width: 350px;
     border-radius: 8px;
     overflow: hidden;
-    font-family: Arial, sans-serif;
+    background-color: white;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
 }
 
 .search-flight-container .sidebar-fs-header {
-    background-color: red;
+    background-color: rgb(224, 54, 54);
     color: white;
-    padding: 10px;
+    padding: 15px 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -110,22 +121,18 @@ body {
     cursor: pointer;
 }
 
-.search-flight-container .sidebar-fs-summary {
-    background-color: #e6f4ff;
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-weight: bold;
+.search-flight-container .sidebar-fs-customer {
+    padding: 15px 20px;
 }
 
 .search-flight-container .sidebar-fs-details {
-    padding: 10px;
+    padding: 15px 20px;
     border-bottom: 1px solid #ccc;
+    border-top: 1px solid #ccc;
 }
 
 .search-flight-container .sidebar-fs-breakdown {
-    padding: 10px;
+    padding: 10px 20px;
     border-bottom: 1px solid #ccc;
 }
 
@@ -135,18 +142,52 @@ body {
     margin-bottom: 8px;
 }
 
+.search-flight-container .sidebar-fs-details strong {
+    font-weight: 550;
+}
+
 .search-flight-container .sidebar-fs-footer {
-    padding: 10px;
-    background-color: #f8f8f8;
+    padding: 15px 20px;
+    background-color: rgb(224, 54, 54);
     font-weight: bold;
     display: flex;
     justify-content: space-between;
 }
 
+.search-flight-container .flight-list-container {
+    margin-top: 20px;
+}
 
+.jss7838 {
+    width: 27%;
+}
+
+.jss8427,
+.jss8424,
+.jss8425 {
+    flex: 1;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    height: 40px;
+}
+
+.MuiBox-root img {
+    width: 100%;
+    margin: auto;
+    max-width: 80px;
+    ;
+}
+
+.jss8423 {
+    width: 73%;
+}
+
+.MuiBox-root {
+    display: flex;
+    gap: 3px;
+}
 
 .search-flight-container .flight-list {
-    margin-top: 20px;
     display: flex;
     flex-direction: column;
     gap: 16px;
@@ -155,19 +196,33 @@ body {
 
 .search-flight-container .flight-card {
     border: 1px solid #ccc;
-    border-radius: 8px;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
     overflow: hidden;
     display: flex;
 }
 
+.search-flight-container .airbus {
+    font-size: 13px;
+}
+
+.search-flight-container .airbus span {
+    color: rgb(224, 54, 54);
+    font-weight: 550;
+}
+
 
 .search-flight-container .flight-info {
+    padding: 10px;
     width: 27%;
     background-color: #ffcc00;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    gap: 5px;
     color: black;
 }
 
@@ -179,11 +234,23 @@ body {
 
 
 .search-flight-container .class-info {
-    width:  73%;    
+    width: 73%;
     display: flex;
     justify-content: space-between;
-    padding: 8px;
     background: #f9f9f9;
+}
+
+.search-flight-container .price-info {
+    padding: 5px;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 16px;
+    justify-content: center;
+}
+
+.search-flight-container .sidebar-fs-details p {
+    font-size: 13px;
 }
 
 
@@ -192,8 +259,23 @@ body {
     flex: 1;
     padding: 8px;
     border-right: 1px solid #ccc;
+    cursor: pointer;
+    transition: background-color 0.3s;
 }
 
+
+.search-flight-container .class-card:first-child:hover {
+    background-color: rgb(193, 237, 197);
+}
+
+.search-flight-container .class-card:nth-child(2):hover {
+    background-color: rgb(255, 244, 189);
+}
+
+
+.search-flight-container .class-card:nth-child(3):hover {
+    background-color: rgb(255, 211, 213);
+}
 
 .search-flight-container .class-card:last-child {
     border-right: none;
@@ -221,8 +303,18 @@ body {
 
 
 .search-flight-container .class-card .price {
-    font-size: 16px;
-    color: black;
+    font-size: 23px;
+    color: #333;
+    font-weight: 550;
+    line-height: 28px;
+    font-style: italic;
+}
+
+.search-flight-container .residue {
+    font-size: 14px;
+    color: grey;
+    font-style: italic;
+    font-weight: 500;
 }
 
 
@@ -248,23 +340,130 @@ body {
     color: black;
 }
 
-@media screen and (max-width: 1100px) {
-    .search-flight-container .flight-info .time span {
-        display: block;
+.search-flight-container .sidebar-fs-breakdown div {
+    background-color: #F1F1F1;
+    padding: 15px;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px;
+}
+
+.search-flight-container .sidebar-fs-customer div {
+    background-color: #F1F1F1;
+    padding: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px;
+}
+
+.search-flight-container .sidebar-fs h3 {
+    font-size: 20px;
+    font-weight: 600;
+    color: white
+}
+
+.search-flight-container .sidebar-fs-footer strong {
+    color: white;
+    font-weight: 600;
+    font-size: 20px;
+}
+
+.search-flight-container .continue-container {
+    display: flex;
+    width: 1200px;
+    max-width: calc(100% - 48px);
+    margin: auto;
+}
+
+.search-flight-container.fs-arrow svg {
+    width: 25px;
+}
+
+.search-flight-container .fs-continue {
+    background: white;
+    padding-top: 13px;
+    padding-bottom: 13px;
+    position: fixed;       
+    bottom: 0;             
+    left: 0; 
+    width: 100%;
+    z-index: 1000;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+}
+
+.search-flight-container .fs-btn-continue {
+    display: block;
+    border: none;
+    background-color: rgb(224, 54, 54);
+    color: white;
+    font-size: 16px;
+    padding: 10px 20px;
+    border-radius: 10px;
+    font-weight: 550;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s;
+    margin-left: auto;
+}
+
+.search-flight-container .fs-btn-continue:hover {
+    cursor: pointer;
+    transform: translateY(-5px);
+}
+
+.search-flight-container .summary-price {
+    width: 100%;
+    margin-left: 50%;
+    display: flex;
+    gap: 3px;
+    flex-direction: column;
+    align-items: center;
+}
+
+.search-flight-container .special-des-price {
+    font-size: 18px;
+    font-weight: 550;
+}
+
+.sidebar-fs-footer strong:nth-child(2) {
+    font-style: italic;
+}
+
+.search-flight-container .sidebar-fs-startTrip {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 20px;
+    background-color: rgb(201, 239, 255);
+}
+
+.search-flight-container .sidebar-fs-startTrip svg {
+    width: 1em;
+    margin-left: 5px;
+    height: 1em;
+    margin-left: 5px;
+}
+
+@media screen and (max-width: 1250px) {
+    .search-flight-container .fs-icon, .search-flight-container .fs-icon1 {
+        width: 30px;
+        height: 30px;
     }
-    .search-flight-container .flight-info .time {
-        display: flex;
-        flex-direction: column;
+
+    .search-flight-container svg {
+        width: 1.2em;
+        height: 1.2em;
     }
+
+}
+
+@media screen and (max-width: 1200px) {
 
     .search-flight-container .left-fs-main-content {
         width: 100%;
     }
 
 
-    .search-flight-container .route-info {
-        gap: 100px;
-    }
 
     .search-flight-container .right-fs-main-content {
         display: none;
@@ -276,12 +475,64 @@ body {
 }
 
 @media screen and (max-width: 1000px) {
-    
+
+    .search-flight-container .content {
+        flex-direction: column;
+    }
+
     .search-flight-container .sidebar-fs {
         display: none;
     }
 
-    .search-flight-container .right-search-fs {
+    .search-flight-container .left-search-fs {
         width: 100%;
     }
+}
+
+@media screen and (max-width: 767px) {
+    .search-flight-container .title {
+        font-size: 20px;
+    }
+
+    .search-flight-container .airport {
+        font-size: 13px;
+    }
+
+    .search-flight-container span:nth-child(2) {
+        font-size: 13px;
+    }
+
+  
+
+    .MuiBox-root img {
+        width: 60%;
+    }
+    .search-flight-container .time-text {
+        font-size: 15px;
+    }
+
+    .search-flight-container .flight-code {
+        font-size: 11px;
+    }
+
+    .search-flight-container .airbus {
+        font-size: 11px;
+    }
+
+    .search-flight-container .class-card .price {
+        font-size: 19px;
+    }
+
+    .search-flight-container .residue {
+        font-size: 12px;
+    }
+}
+
+@media screen and (max-width: 550px) {
+
+    .search-flight-container .time {
+        display: flex;
+        flex-direction: column;
+    }
+    
 }
