--- a/src/FE/src/components/ActionForm/ActionForm.css
+++ b/src/FE/src/components/ActionForm/ActionForm.css
@@ -285,3 +285,28 @@
     transform: translateY(-50%);
     cursor: pointer;
 }
+
+.login-btn:disabled,
+.logup-btn:disabled {
+    opacity: 0.7;
+    cursor: not-allowed;
+}
+
+.login-btn,
+.logup-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.login-btn .anticon,
+.logup-btn .anticon {
+    font-size: 16px;
+}
+
+.error-message {
+    color: red;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 1.4rem;
+}
