--- a/src/FE/src/components/MainContent/AirportSearch.css
+++ b/src/FE/src/components/MainContent/AirportSearch.css
@@ -1,53 +1,63 @@
 .list-airports {
-    position: absolute; /* Hiện ngay bên dưới ô input */
-    top: 100%; /* Hiện ngay dưới ô input */
-    left: 0;
-    width: 205%;
-    border: 1px solid #ddd;
-    max-height: 500px;
-    overflow-y: auto;
-    background-color: #fff;
-    z-index: 19;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    padding: 5px;
-    padding-left: 15px;
-    padding-right: 15px;
+  position: absolute; /* Hiện ngay bên dưới ô input */
+  top: 100%; /* Hiện ngay dưới ô input */
+  margin-top: 10px; /* fix cứng */
+  left: -40px; /* fix cứng */
+  width: 305px; /* fix cứng */
+  border: 1px solid #ddd;
+  max-height: 500px;
+  overflow-y: auto;
+  background-color: #fff;
+  z-index: 19;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  padding: 5px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.input-field {
+  border: none;
+  outline: none;
+  flex: 1;
+  font-size: 14px;
+  color: #333;
+  background-color: transparent;
 }
 
 .row {
-    display: flex; /* Thiết lập chế độ Flexbox */
-    flex-direction: row; /* Xác định chiều xếp theo hàng ngang */
-    justify-content: space-between; /* Căn lề sát hai bên */
-    align-items: center; /* Căn giữa theo chiều dọc */
+  display: flex; /* Thiết lập chế độ Flexbox */
+  flex-direction: row; /* Xác định chiều xếp theo hàng ngang */
+  justify-content: space-between; /* Căn lề sát hai bên */
+  align-items: center; /* Căn giữa theo chiều dọc */
 }
 
 .country-cell {
-    font-weight: bold; /* In đậm */
-    font-size: 16px; /* Thay đổi kích thước chữ */
+  font-weight: bold; /* In đậm */
+  font-size: 16px; /* Thay đổi kích thước chữ */
 }
 
 .city-cell {
-    font-size: 12px;
-    margin-top: 5px;
+  font-size: 12px;
+  margin-top: 5px;
 }
 
 span {
-    display: inline-block;
-    transition: transform 0.3s ease; /* Thêm animation mượt */
+  display: inline-block;
+  transition: transform 0.3s ease; /* Thêm animation mượt */
 }
 
 .rotated {
-    transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 
 /* Animation container */
 .airport-list {
-    max-height: 0; /* Start with 0 height */
-    overflow: hidden; /* Hide overflowing elements */
-    transition: max-height 0.5s ease-in-out; /* Add a smooth transition */
+  max-height: 0; /* Start with 0 height */
+  overflow: hidden; /* Hide overflowing elements */
+  transition: max-height 0.5s ease-in-out; /* Add a smooth transition */
 }
 
 /* When visible, expand the max-height */
 .airport-list.show {
-    max-height: 1300px; /* Enough height to show the list items */
+  max-height: 1300px; /* Enough height to show the list items */
 }
