--- a/src/FE/src/assets/styles/responsives.css
+++ b/src/FE/src/assets/styles/responsives.css
@@ -71,7 +71,7 @@
     }
 
     main .main-leftcontent {
-        width: 80%;
+        width: 100%;
         text-align: center;
         margin: 0 auto;
     }
@@ -228,9 +228,9 @@
 
 @media screen and (max-width: 767px) {
 
-    .main-booking {
+    /* .main-booking {
         width: 300px;
-    }
+    } */
     .flight-options {
         justify-content: space-between;
     }
@@ -368,7 +368,12 @@
     }
 
     .featured .list {
+        width: 100%;
         grid-template-columns: repeat(1, 1fr);
+    }
+
+    .features {
+        width: 100%;
     }
 
     .world-map {
@@ -430,6 +435,11 @@
     .num-stats .stats-desc {
         font-size: 1.2rem;
         margin-top: 10px;
+        text-align: center;
+    }
+
+    .stats-info .detailed {
+        text-align: center;
     }
 
     .stats-info .num {
