--- a/src/FE/src/components/Header/Header.css
+++ b/src/FE/src/components/Header/Header.css
@@ -97,15 +97,16 @@
 }
 
 .dropdown-menu { 
-    a {
+    a, div {
         display: block;
         padding: 8px 16px;
         color: #333;
         text-decoration: none;
         transition: background-color 0.2s;
+        cursor: pointer;
     }
 
-    a:hover {
+    a:hover, div:hover {
         background-color: #f5f5f5;
     }    
 }
