--- a/src/FE/src/components/SearchFlight/SearchFlight.css
+++ b/src/FE/src/components/SearchFlight/SearchFlight.css
@@ -47,7 +47,8 @@ body {
 }
 
 
-.search-flight-container .fs-icon, .search-flight-container .fs-icon1 {
+.search-flight-container .fs-icon,
+.search-flight-container .fs-icon1 {
     width: 40px;
     height: 40px;
     background: white;
@@ -165,6 +166,7 @@ body {
 .jss8427,
 .jss8424,
 .jss8425 {
+    cursor: pointer;
     flex: 1;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
@@ -190,7 +192,6 @@ body {
 .search-flight-container .flight-list {
     display: flex;
     flex-direction: column;
-    gap: 16px;
 }
 
 
@@ -261,6 +262,9 @@ body {
     border-right: 1px solid #ccc;
     cursor: pointer;
     transition: background-color 0.3s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -384,9 +388,9 @@ body {
     background: white;
     padding-top: 13px;
     padding-bottom: 13px;
-    position: fixed;       
-    bottom: 0;             
-    left: 0; 
+    position: fixed;
+    bottom: 0;
+    left: 0;
     width: 100%;
     z-index: 1000;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
@@ -413,7 +417,7 @@ body {
 
 .search-flight-container .summary-price {
     width: 100%;
-    margin-left: 50%;
+    margin-left: 30%;
     display: flex;
     gap: 3px;
     flex-direction: column;
@@ -444,8 +448,101 @@ body {
     margin-left: 5px;
 }
 
+.ticket-info-container {
+    font-family: Arial, sans-serif;
+    background-color: rgb(193, 237, 197);
+    padding: 20px;
+    height: 395px;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    overflow-y: auto;
+}
+
+.ticket-info {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.ticket-info__title {
+    margin: 10px 0;
+    font-weight: bold;
+}
+
+.ticket-info__list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.ticket-info__item {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin: 5px 0;
+}
+
+.ticket-info__icon {
+    font-size: 16px;
+}
+
+.ticket-info__icon--check {
+    color: green;
+}
+
+.ticket-info__icon--cross {
+    color: red;
+}
+
+.ticket-info__link {
+    display: inline-block;
+    color: #007bff;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+.ticket-info__link:hover {
+    text-decoration: underline;
+}
+
+.ticket-info__status {
+    font-weight: bold;
+    color: green;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.ticket-info-container--business {
+    background-color: rgb(255, 244, 189);
+}
+
+.ticket-info-container-firstclass {
+    background-color: rgb(255, 211, 213);
+}
+
+.ticket-info-container::-webkit-scrollbar {
+    width: 3px; 
+}
+
+.ticket-info-container::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+    border-radius: 10px; 
+}
+
+.ticket-info-container::-webkit-scrollbar-thumb {
+    background: #817f7f;
+    border-radius: 10px;
+}
+
+
+
+
+
 @media screen and (max-width: 1250px) {
-    .search-flight-container .fs-icon, .search-flight-container .fs-icon1 {
+
+    .search-flight-container .fs-icon,
+    .search-flight-container .fs-icon1 {
         width: 30px;
         height: 30px;
     }
@@ -502,11 +599,12 @@ body {
         font-size: 13px;
     }
 
-  
+
 
     .MuiBox-root img {
         width: 60%;
     }
+
     .search-flight-container .time-text {
         font-size: 15px;
     }
@@ -534,5 +632,5 @@ body {
         display: flex;
         flex-direction: column;
     }
-    
+
 }
