--- a/src/FE/src/components/admin/components/AdminTable/AdminTable.module.css
+++ b/src/FE/src/components/admin/components/AdminTable/AdminTable.module.css
@@ -38,6 +38,7 @@
     justify-content: center;
     align-items: center;
     gap: 8px;
+    padding-right: 16px;
 }
 
 .statusContainer {
@@ -54,7 +55,7 @@
     display: inline-flex;
     min-width: fit-content;
     height: 90%;
-    width: 90%;
+    width: 100%;
     justify-content: center;
     white-space: normal;
     word-wrap: break-word;
@@ -140,6 +141,6 @@
 }
 
 .tableHeader {
-    margin-bottom: 1em;
+    margin-bottom: 0.8em;
 }
 
