--- a/src/FE/src/components/pages/Destination.css
+++ b/src/FE/src/components/pages/Destination.css
@@ -141,14 +141,24 @@ select.form-control {
 }
 
 .common-search-destination input::placeholder {
-    color: black;
-    font-size: 16px;
+    /* color: black; */
+    color: #888787;
+    font-size: 14px;
+}
+
+.search-popular-destination .input-group .icon {
+    margin-right: 5px;
+}
+
+.destination-container .content {
+    padding-bottom: 10px;
 }
 
 .pd-title {
     margin-top: 20px;
     font-size: 24px;
     font-weight: 600;
+    text-align: center;
 }
 
 .destination-container .thumb {
@@ -159,10 +169,41 @@ select.form-control {
     border-top-right-radius: 12px;
 }
 
+.search-popular-destination .input-group {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    background-color: white;
+    border: 1px solid #DCDCDC;
+    border-radius: 10px;
+}
+
+.search-popular-destination .input-group .icon {
+    margin-left: 15px;
+}
+
+.common-search-destination input:focus {
+    outline: none;
+}
+
+.search-popular-destination .airport-search {
+    width: 100%;
+}
 
 @media screen and (max-width: 1100px) {
+    .destination-grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
     .destination-container .list {
         grid-template-columns: repeat(2, 4fr);
+    }
+    .search-popular-destination {
+        flex-direction: column;
+        gap: 10px;
+    }
+    .search-popular-destination .input-group {
+        width: 100%;
+        min-height: 50px;
     }
 
 }
@@ -172,11 +213,13 @@ select.form-control {
         grid-template-columns: repeat(1, 4fr);
     }
 
+    .pd-title {
+        font-size: 20px;
+    }
+
 }
 
-@media screen and (max-width: 700px) {
-    .search-popular-destination {
-        flex-direction: column;
-        gap: 10px;
-    }
+@media screen and (max-width: 996px) {
+    
+    
 }
