--- a/src/FE/src/components/pages/Destination.css
+++ b/src/FE/src/components/pages/Destination.css
@@ -190,6 +190,46 @@ select.form-control {
     width: 100%;
 }
 
+.modal-content h3 {
+    font-size: 22px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.modal-content {
+    background: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    width: 400px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    position: relative;
+    text-align: center;
+}
+
+.close-modal {
+    min-width: 100px;
+    margin-top: 20px;
+    padding: 10px 20px;
+    background: rgb(224, 54, 54);
+    color: #fff;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
 @media screen and (max-width: 1100px) {
     .destination-grid {
         grid-template-columns: repeat(2, 1fr);
