--- a/src/FE/src/components/MainContent/MainContent.css
+++ b/src/FE/src/components/MainContent/MainContent.css
@@ -1,3 +1,33 @@
+.loading-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(253, 248, 248, 0.5); 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999; 
+}
+
+.loading-container {
+  text-align: center;
+}
+
+.loading-container img {
+  width: 100px;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
+
+.loading-container p {
+  margin-top: 10px;
+  font-size: 16px;
+}
+
+
 main .main-leftcontent .ranking {
   background-color: #fef5f6;
   color: var(--primary-color);
