--- a/src/FE/src/components/pages/MyFlights.css
+++ b/src/FE/src/components/pages/MyFlights.css
@@ -1,198 +1,204 @@
 main {
-    min-height: 100vh;
+  min-height: 100vh;
 }
 
 .myflights-container {
-    padding-top: 40px;
+  padding-top: 30px;
+}
+
+.content {
+  margin: 0px;
 }
 
 .myflights-container button {
-    border: none;
-    background-color: transparent;
-    color: #6c6a6a;
-    padding: 10px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    font-size: 1.6rem;
-    font-weight: 600;
-    transition: background-color 0.3s, color 0.3s;
+  border: none;
+  background-color: transparent;
+  color: #6c6a6a;
+  padding: 10px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  font-size: 1.6rem;
+  font-weight: 600;
+  transition: background-color 0.3s, color 0.3s;
 }
 
 .search-codemyflights:hover {
-    cursor: pointer;
-    background-color: rgb(255, 250, 250);
-    color: rgb(224, 54, 54);
+  cursor: pointer;
+  background-color: rgb(255, 250, 250);
+  color: rgb(224, 54, 54);
 }
 
 .search-myflights:hover {
-    cursor: pointer;
-    background-color: rgb(255, 250, 250);
-    color: rgb(224, 54, 54);
+  cursor: pointer;
+  background-color: rgb(255, 250, 250);
+  color: rgb(224, 54, 54);
 }
 
 .myflights-container .active-flightoption {
-    background-color: rgb(255, 250, 250);
-    color: rgb(224, 54, 54);
+  background-color: rgb(255, 250, 250);
+  color: rgb(224, 54, 54);
 }
 
 .myflights-container button > div {
-    min-width: 160px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    gap: 5px;
+  min-width: 160px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  gap: 5px;
 }
 
 .bottomrow-myflights {
-    padding: 30px;
-    background-color: rgb(255, 250, 250);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    display: flex;
-    justify-content: space-between;
+  padding: 30px;
+  width: 100%;
+  background-color: rgb(255, 250, 250);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: space-between;
 }
 
-.myflight-image  {
-    width: 56%;
+.myflight-image {
+  width: 56%;
 }
 
 .myflight-image img {
-    border-radius: 10px;
+  border-radius: 10px;
 }
 
 .flight-form {
-    width: 37%;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
+  width: 37%;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
 }
 
 .flight-form h2 {
-    font-size: 20px;
-    font-weight: 600;
-    color: #333;
-    margin-bottom: 10px;
+  font-size: 20px;
+  font-weight: 600;
+  color: #333;
+  margin-bottom: 10px;
 }
 
 .flight-form p {
-    font-size: 1.6rem;
-    line-height: 1.4;
-    color: #666;
-    margin-bottom: 20px;
+  font-size: 1.6rem;
+  line-height: 1.4;
+  color: #666;
+  margin-bottom: 20px;
 }
 
-
 .flight-form .input-group {
-    position: relative;
-    margin-bottom: 15px;
+  position: relative;
+  margin-bottom: 15px;
 }
 
 .flight-form input[type="text"] {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    font-size: 14px;
-    color: #333;
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  font-size: 14px;
+  color: #333;
 }
 
 .flight-form input::placeholder {
-    color: #666;
+  color: #666;
 }
 
 .flight-form input::placeholder {
-    font-size: 14px;
+  font-size: 14px;
 }
 
 .flight-form input::placeholder {
-    color: #666;
+  color: #666;
 }
 
 .flight-form input::placeholder {
-    color: #666;
+  color: #666;
 }
 
 .flight-form input[placeholder*="*"]::placeholder {
-    color: rgb(224, 54, 54);
+  color: rgb(224, 54, 54);
 }
 
 .flight-form button {
-    display: block;
-    margin: 0 auto;
-    padding: 10px 20px;
-    font-size: 16px;
-    background-color: rgb(224, 54, 54);
-    color: white;
-    border: none;
-    border-radius: 20px;
-    cursor: pointer;
-    transition: opacity 0.3s;
+  display: block;
+  margin: 0 auto;
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: rgb(224, 54, 54);
+  color: white;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: opacity 0.3s;
 }
 
 .flight-form button:hover {
-    opacity: 0.9;
+  opacity: 0.9;
 }
 
 .myflight-image img {
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: auto;
 }
 
 .history-container {
-    padding: 30px;
-    text-align: center;
-    width: 100%;
-    background: white;
-    height: 500px;
+  padding: 20px;
+  margin: 0px;
+  text-align: center;
+  width: 100%;
+  min-height: 600px;
+  background: white;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  /* height: 500px; */
 }
 
 /* Tabs */
 .tabs {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 20px;
-    gap: 20px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+  gap: 20px;
 }
 
 .tab {
-    flex: 1;
-    padding: 10px;
-    background-color: #ffffff;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: background-color 0.3s;
+  flex: 1;
+  padding: 10px;
+  background-color: #ffffff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.3s;
 }
 
 .tab:not(:last-child) {
-    margin-right: 5px;
+  margin-right: 5px;
 }
 
 .tab.active {
-    border: 2px solid #f66; /* active border color */
-    color: #f66; /* active text color */
+  border: 2px solid #f66; /* active border color */
+  color: #f66; /* active text color */
 }
 
 .empty-state {
-    height: 80%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: #666;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #666;
 }
 
 .empty-state svg {
-    margin-bottom: 15px;
-    fill: #cccccc;
+  margin-bottom: 15px;
+  fill: #cccccc;
 }
 
 .empty-state p {
-    font-size: 1.7rem;
-    color: #333333;
+  font-size: 1.7rem;
+  color: #333333;
 }
 
-
 .myflights-container .fa-solid {
-    margin-bottom: 3px;
+  margin-bottom: 3px;
 }
